rev51
 - Updated lua files + lub files to kRO Patch(2010-06-30)
 - Advanced update to msgstring_kr.lub (thanks rytech)

rev49 - [2010-06-23]
 - Updated lua files + lub files to kRO Patch(2010-06-23)

rev47 - [2010-06-17]
 - Updated lua files + lub files to kRO Patch(2010-06-16)

rev46 - [2010-06-14]
 - Fixed GN_CRAZYWEED level to 10
 
rev45 - [2010-06-10]
 - Updated lua files + lub files to kRO Patch(2010-06-09)

rev40 - [2010-05-29]
 - Updated lua files + lub files to kRO Patch(2010-05-26)

rev39 - [2010-05-29]
 - Updated lua files + lub files to kRO Patch(2010-05-19)

rev35 - [2010-05-12]
 - Updated lua files + lub files to kRO Patch(2010-05-12)

rev32 - [2010-05-04]
 - Updated lua files + lub files to kRO Patch(2010-04-28)

rev28 - [2010-04-21]
 - Updated lua files + lub files to kRO Patch(2010-04-21)

rev27 - [2010-04-20]
 - Updated skilldescript.lua translation (thanks Chilly for sharing your updated skilldesctable)
 - Added 2010-04-14 v2 lub file

rev26 - [2010-04-20]
 - Updated lua files to kRO Patch(2010-04-14) this includes the 6 new lub files
 - fixed party_booking it matches the official one
 - skilldescript and skillinfoid are not 100% translated i need an updated skilldesctable
 - Added lub files for that patch

rev21 - [2010-04-07]
 - Updated lua files to kRO Patch(2010-04-07)
 - Added Lub files for that patch [90% translated stateiconinfo]

rev20 - [2010-04-06] - Updated translation for stateiconinfo.lua rev17 - [2010-03-31]
 - Updated lua files to kRO Patch(2010-03-31)
 - Added Lub files for that patch [90% translated stateiconinfo]
 
rev16 - [2010-03-29]
 - Removed Hex/Diff files (already added in "[UI] TranslateClient In English" official diff)
 - Added 2010-03-24 Lub Files v1 [90% translated stateiconinfo]

rev15 - [2010-03-27]
 - stateiconinfo updates
 - added diff/hex files for party_booking
 - added 2010-03-17 Lub Files v1 [90% translated stateiconinfo]

rev13 - [2010-03-24]
 - Updated lua files to latest kRO patch(2010-03-24)
