@@ -145,7 +145,7 @@ MsgStrID = {
 	MSI_INALL = "Allows whispers from anyone",
 	MSI_EXALL = "Blocks whispers from everyone.",
 	MSI_PVPINFO = "/pvpinfo : Shows your PVP result and PVP points.",
-	MSI_HUNTING = "/hunting : You can check the your hunting list."
+	MSI_HUNTING = "/hunting : You can check the your hunting list.",
 	MSI_MAP_LIST_ALLSELECT = "All Maps",
 	MSI_MAP_LIST_NAME_PRONTERA = "Prontera",
 	MSI_MAP_LIST_NAME_FILD = "Fields",
@@ -297,7 +297,7 @@ MsgStrID = {
 	MSI_MAP_LIST_NAME_HU_FILD01 = "Thanatos Tower Entrance",
 	MSI_MAP_LIST_NAME_RAHEL = "Rachel",
 	MSI_MAP_LIST_NAME_RA_FILD01 = "Audumra Grass Land",
-	MSI_MAP_LIST_NAME_RA_FILD03 = "Ida Plane"",
+	MSI_MAP_LIST_NAME_RA_FILD03 = "Ida Plane",
 	MSI_MAP_LIST_NAME_RA_FILD06 = "Fortu Luna",
 	MSI_MAP_LIST_NAME_RA_SAN01 = "Temple Sanctuary North F1",
 	MSI_MAP_LIST_NAME_RA_SAN02 = "Temple Sanctuary West F1",
@@ -319,13 +319,13 @@ MsgStrID = {
 	MSI_MAP_LIST_NAME_NIF_FILD01 = "Skellington Solitary Village",
 	MSI_MAP_LIST_NAME_NIF_FILD02 = "Valley of Gyoll",
 	MSI_MAP_LIST_NAME_UNDERWORLS = "Passage",
-	MSI_MAP_LIST_NAME_MAN_FILD01 = "Manuk Field"",
+	MSI_MAP_LIST_NAME_MAN_FILD01 = "Manuk Field",
 	MSI_MAP_LIST_NAME_SPL_FILD01 = "Splendide Field",
 	MSI_MAP_LIST_NAME_DIC_FILD01 = "Foot of Kamidal Mountain",
-	MSI_MAP_LIST_NAME_DIC_DUN01 = "Kamidal Tunnel"",
+	MSI_MAP_LIST_NAME_DIC_DUN01 = "Kamidal Tunnel",
 	MSI_MAP_LIST_NAME_DIC_DUN02 = "Scaraba Hole",
 	MSI_MAP_LIST_NAME_NYD_DUN01 = "Nidhogg's Dungeon F1",
-	MSI_MAP_LIST_NAME_NYD_DUN02 = "Nidhogg's Dungeon F2"",
+	MSI_MAP_LIST_NAME_NYD_DUN02 = "Nidhogg's Dungeon F2",
 	MSI_MAP_LIST_NAME_AMACH = "Amatsu",
 	MSI_MAP_LIST_NAME_AMA_DUN01 = "Tatami Maze",
 	MSI_MAP_LIST_NAME_AMA_DUN02 = "Underground Forest Battle Field",
